--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Blank Website</title>
+    <title>Project Grape</title>
     <style>
         body {
             display: flex;
